# PROJETS

ConduiteProjet/: Backlog.md  Sprint1.md
FD-2020-2021-M1-CC-sujet/: FD-2020-2021-M1-CC-sujet.tgz  tank.tex  (+4 more)
projet  c technologique/: CMakeLists.txt
projet  c technologique/UndeadGraphique/: CMakeCache.txt  Makefile  cmake_install.cmake  demo  model  model.c
projet  c technologique/UndeadGraphique/V1/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  solver.c  testAM  testSAM  testSEY  testSolver.c  test_DIAK  undead_sdl2
projet  c technologique/UndeadGraphique/V1/Testing/: TAG
projet  c technologique/UndeadGraphique/V1/Testing/20180413-1008/: Coverage.xml  CoverageLog-0.xml
projet  c technologique/UndeadGraphique/V1/Testing/CoverageInfo/: game.c.gcda##game.c.gcov  game_io.c.gcda##game_io.c.gcov  solver.c.gcda##solver.c.gcov  testAM.c.gcda##testAM.c.gcov  testSAM.c.gcda##testSAM.c.gcov  testSEY.c.gcda##testSEY.c.gcov  test_DIAK.c.gcda##test_DIAK.c.gcov
projet  c technologique/UndeadGraphique/V1/Testing/Temporary/: CTestCostData.txt
projet  c technologique/V1/: CMakeCache.txt  DartConfiguration.tcl  Makefile  aleatoire  foo  testAM  testAM.c  testSAM  testSEY  testSEY.c  test_DIAK  undead_sdl2  undead_sdl2.c
projet  c technologique/fichiers-05/: a.out  foo.c  foo.c.gcov  foo.gcda  foo.gcno  somme_entiers.c
projet  c technologique/fichiers-08/: exemple.aux  exemple.blg  exemple.tex  exemple.toc  premier
projet  c technologique/sdl2-demo/: CMakeCache.txt  Makefile  cmake_install.cmake  demo  model
(+130 files in other folders)
